@@ -1,3 +1,7 @@
+2008-11-01  Oliver Hader  <oliver@typo3.org>
+
+	* Added feature #6637: Integrate possibility to reverse order of rootline HMENU (thanks to Ralf Hettinger)
+
 2008-10-31  Jeff Segars  <jeff@webempoweredchurch.org>
 
 	* Added feature #6626: config.fileTarget for link target on files (thanks to Ralf Hettinger)
